5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1633_2946.log
== TEST (2019-04-02 18:05:19) 
-- CODE:
float(input("digite a media dos laboratorios")
-- ERROR:
File "XXXX", line 2
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:05:37) 
-- CODE:
float(round("digite a media dos laboratorios")
-- ERROR:
File "XXXX", line 2
    
                                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:05:43) 
-- CODE:
float("digite a media dos laboratorios")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("digite a media dos laboratorios")
ValueError: could not convert string to float: 'digite a media dos laboratorios'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:06:03) 
-- CODE:
float(input("digite a media dos laboratorios"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("digite a media dos laboratorios")
ValueError: could not convert string to float: 'digite a media dos laboratorios'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:06:34) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("digite a media dos laboratorios")
ValueError: could not convert string to float: 'digite a media dos laboratorios'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:06:35) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("digite a media dos laboratorios")
ValueError: could not convert string to float: 'digite a media dos laboratorios'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:06:44) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("digite a media dos laboratorios")
ValueError: could not convert string to float: 'digite a media dos laboratorios'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:14) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("digite a media dos laboratorios")
ValueError: could not convert string to float: 'digite a media dos laboratorios'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:11) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(float(round))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=print(float(round))
TypeError: float() argument must be a string or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:18) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(float(round))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=print(float(round))
TypeError: float() argument must be a string or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:09:26) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(float(round))
-- EXECUTION TIME:
0.193043
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2946/main.py", line 5, in <module>
    total=print(float(round))
TypeError: float() argument must be a string or a number, not 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:09:28) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(float(round))
-- EXECUTION TIME:
0.202934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2946/main.py", line 5, in <module>
    total=print(float(round))
TypeError: float() argument must be a string or a number, not 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:10:07) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(float(round)(//3.0))
-- EXECUTION TIME:
0.18089
-- ERROR:
  File "/home/codebench/codes/1633/2946/main.py", line 5
    total=print(float(round)(//3.0))
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:10) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(float(round)(//3.0))
-- ERROR:
File "XXXX", line 5
    total=print(float(round)(//3.0))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:12) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(float(round)(//3.0))
-- ERROR:
File "XXXX", line 5
    total=print(float(round)(//3.0))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:02) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(round(/3.0)
-- ERROR:
File "XXXX", line 5
    total=print(round(/3.0)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:03) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(round(/3.0)
-- ERROR:
File "XXXX", line 5
    total=print(round(/3.0)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:13) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(round(//3.0)
-- ERROR:
File "XXXX", line 5
    total=print(round(//3.0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:11:15) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(round(//3.0)
-- EXECUTION TIME:
0.157901
-- ERROR:
  File "/home/codebench/codes/1633/2946/main.py", line 5
    total=print(round(//3.0)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:15) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(round(//3.0)
-- ERROR:
File "XXXX", line 5
    total=print(round(//3.0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:07) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("digite a media das provas"))

total=print(round(3.0)
-- ERROR:
File "XXXX", line 6
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:39) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov/3.0)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:40) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov/3.0)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:52) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov // 3.0)
-- ERROR:
File "XXXX", line 6
    
                                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:54) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov // 3.0)
-- ERROR:
File "XXXX", line 6
    
                                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:00) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov // 3)
-- ERROR:
File "XXXX", line 6
    
                                                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:02) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov // 3)
-- ERROR:
File "XXXX", line 6
    
                                                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:12) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:14) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:15) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:16) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:16) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:17) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:18:18) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3)
-- EXECUTION TIME:
0.162381
-- ERROR:
  File "/home/codebench/codes/1633/2946/main.py", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:19) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3)
-- ERROR:
File "XXXX", line 6
    
                                                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:02) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov // 3))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:33) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:06) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:20:24) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0))
-- EXECUTION TIME:
0.179928
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
16
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:38) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov % 3.0))
-- OUTPUT:
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:19) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov * 3.0))
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:37) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov * 3.0))
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:10) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov ** 3.0))
-- OUTPUT:
147
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:59) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:06) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios % 25"))
med_dos_trab=float(input("digite a media dos trabalhos % 25"))
med_das_prov=float(input("digite a media das provas % 25"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:35) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios % 25"))
med_dos_trab=float(input("digite a media dos trabalhos % 30"))
med_das_prov=float(input("digite a media das provas % 45"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:54) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(med_dos_lab + med_dos_trab + med_das_prov / 3.0)
-- OUTPUT:
16.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:37) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0)
-- ERROR:
File "XXXX", line 6
    
                                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:39) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0)
-- ERROR:
File "XXXX", line 6
    
                                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:39) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0)
-- ERROR:
File "XXXX", line 6
    
                                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:39) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3.0)
-- ERROR:
File "XXXX", line 6
    
                                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:53) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab + med_dos_trab + med_das_prov / 3))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:23) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab%25 + med_dos_trab%30 + med_das_prov%45 / 3))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:46) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab%25 + med_dos_trab%30 + med_das_prov%45 / 3.0))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:17) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab*1/4 + med_dos_trab*1/3 + med_das_prov*1/2 / 3.0))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:20) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab*1/4 + med_dos_trab*1/3 + med_das_prov*1/2 / 3.0))
-- EXECUTION TIME:
0.117441
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
5
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:21) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab*1/4 + med_dos_trab*1/3 + med_das_prov*1/2 / 3.0))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:51:32) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab*0.25 + med_dos_trab*0.30 + med_das_prov*0.6 / 3.0))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:51:32) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab*0.25 + med_dos_trab*0.30 + med_das_prov*0.6 / 3.0))
-- EXECUTION TIME:
0.211787
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
5
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:51:33) 
-- CODE:
med_dos_lab=float(input("digite a media dos laboratorios"))
med_dos_trab=float(input("digite a media dos trabalhos"))
med_das_prov=float(input("digite a media das provas"))

total=print(round(med_dos_lab*0.25 + med_dos_trab*0.30 + med_das_prov*0.6 / 3.0))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
